--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -128,23 +128,23 @@ background #161B1A
 
 # Black
 color0 #696969
-color8 #212121
+color8 #696969
 
 # Red
 color1 #696969
 color9 #C6C6C6
 
 # Green
-color2  #696969
+color2  #161B1A
 color10 #696969
 
 # Yellow
-color3  #696969
-color11 #696969
+color3  #161B1A
+color11 #161B1A
 
 # Blue
 color4  #696969
-color12 #696969
+color12 #161B1A
 
 # Magenta
 color5  #696969
