--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # ----- TMUX BEHAVIOUR ------
 set -g history-limit 10000
 set-option -g history-limit 10000
+set -g default-terminal "screen-256color"
 
 
 # ----- ALLOW COLOR FOR TMUX -----
@@ -41,14 +42,14 @@ set -g status-interval 0
 # ----- THE BAR BELOW CONFIGURATION ----
 set -g status-bg "#161B1A" #colour234
 set -g status-fg colour249
-set -g status-justify 'left'
-set -g status-position bottom
+# set -g status-justify 'left'
+# set -g status-position bottom
 # set -g status-left '#H/#S'
 # set -g status-left-length 20
 # set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 # set -g status-right-length 50
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
+# setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+# setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
 
 
 # ----- LIST OF PLUGINS -----
