--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,8 +48,8 @@ set -g status-fg colour249
 # set -g status-left-length 20
 # set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 # set -g status-right-length 50
-# setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-# setw -g window-status-format ' #I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
+setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F'
+setw -g window-status-format '#I#[fg=colour247]:#[fg=colour247]#W#[fg=colour247]#F '
 
 
 # ----- LIST OF PLUGINS -----
