add readme and a better flameshot

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -87,7 +87,8 @@ bindsym $mod+p exec arandr
 # ----- SCREEN SHOT -----
 # bindsym $mod+y			            exec --no-startup-id flameshot gui -p ~/Pics/screenshots
 # bindsym $mod+Shift+y		            exec --no-startup-id flameshot full -p ~/Pics/screenshots
-bindsym Print exec flameshot gui
+bindsym Print exec flameshot gui -p ~/Pictures/Screenshots
+bindsym Shift+Print exec flameshot full -c -p ~/Pictures/Screenshots
 
 
 # ----- i3-GNOME -----
