--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -30,5 +30,6 @@
       "browser": true,
       "node": true
     }
-  }
+  },
+  "clangd.path": "/home/krehwell/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd"
 }
