no more native lsp, revert to coc and rx fetch

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -35,7 +35,7 @@ font:
     family: Consolas NF
     style: Italic
   normal:
-    family: Consolas NF
+    family: Material Regular
     style: Regular
   offset:
     x: 0
