refine theme with a lil color

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -32,5 +32,17 @@
         }
     },
 
-    "yank.highlight.enable": false
+    "yank.highlight.enable": false,
+    "cSpell.userWords": [
+      "Knowt",
+      "Mixpanel",
+      "PPTs",
+      "Unauth",
+      "Walkthrough",
+      "couchbase",
+      "graphiql",
+      "mygroup",
+      "upsert",
+      "uuidv"
+    ]
 }
