--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -36,10 +36,13 @@
     "cSpell.userWords": [
       "Knowt",
       "Mixpanel",
+      "Objs",
       "PPTs",
       "Unauth",
       "Walkthrough",
+      "callsign",
       "couchbase",
+      "flexbox",
       "graphiql",
       "mygroup",
       "upsert",
