kitty color test

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -132,15 +132,15 @@ color8 #696969
 
 # Red
 color1 #696969
-color9 #C6C6C6
+color9 #E32791
 
 # Green
 color2  #161B1A
-color10 #696969
+color10 #5FD7A7
 
 # Yellow
 color3  #161B1A
-color11 #161B1A
+color11 #F3E430
 
 # Blue
 color4  #696969
@@ -249,8 +249,8 @@ map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
 map kitty_mod+alt+t set_tab_title
 map kitty_mod+l next_layout
-map kitty_mod+equal     change_font_size all +2.0
-map kitty_mod+minus     change_font_size all -2.0
+map kitty_mod+equal     change_font_size all +0.5
+map kitty_mod+minus     change_font_size all -0.5
 map kitty_mod+backspace change_font_size all 0
 map kitty_mod+e kitten hints
 map kitty_mod+p>f kitten hints --type path --program -
