--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -34,13 +34,17 @@
 
     "yank.highlight.enable": false,
     "cSpell.userWords": [
+      "Alacritty",
       "Autoload",
       "Fastify",
       "Knowt",
       "Mixpanel",
       "Objs",
       "PPTs",
+      "Roboto",
+      "Tahoma",
       "Unauth",
+      "Verdana",
       "Walkthrough",
       "bgcolor",
       "boomify",
@@ -52,6 +56,8 @@
       "krehwell",
       "minmax",
       "mygroup",
+      "noreferrer",
+      "overscroll",
       "smtg",
       "spacetime",
       "typebox",
