--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -36,6 +36,7 @@
     "cSpell.userWords": [
       "Alacritty",
       "Autoload",
+      "Consolas",
       "Fastify",
       "Knowt",
       "Mixpanel",
