--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -51,6 +51,7 @@
       "boomify",
       "callsign",
       "couchbase",
+      "firestore",
       "flexbox",
       "graphiql",
       "gruvbox",
@@ -60,6 +61,7 @@
       "noreferrer",
       "overscroll",
       "smtg",
+      "spacebar",
       "spacetime",
       "typebox",
       "upsert",
