long comment by visual

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -42,6 +42,7 @@
       "Mixpanel",
       "Objs",
       "PPTs",
+      "Photoshop",
       "Roboto",
       "Tahoma",
       "Unauth",
@@ -51,6 +52,7 @@
       "boomify",
       "callsign",
       "couchbase",
+      "dickbutt",
       "firestore",
       "flexbox",
       "graphiql",
