no shift screen on switch buffer

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -52,11 +52,13 @@
       "boomify",
       "callsign",
       "couchbase",
+      "crossorigin",
       "dickbutt",
       "firestore",
       "flexbox",
       "graphiql",
       "gruvbox",
+      "haha",
       "krehwell",
       "minmax",
       "mygroup",
@@ -69,6 +71,7 @@
       "upsert",
       "uuidv",
       "valign",
-      "yakuza"
+      "yakuza",
+      "yuza"
     ]
 }
