convert inline css

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -51,9 +51,11 @@
       "Walkthrough",
       "bgcolor",
       "boomify",
+      "btns",
       "callsign",
       "couchbase",
       "crossorigin",
+      "curr",
       "dickbutt",
       "firestore",
       "flexbox",
@@ -61,10 +63,17 @@
       "gruvbox",
       "haha",
       "krehwell",
+      "lightgray",
+      "lightgreen",
       "minmax",
+      "moar",
       "mygroup",
       "noreferrer",
       "overscroll",
+      "palegoldenrod",
+      "palegreen",
+      "paleturquoise",
+      "palevioletred",
       "smtg",
       "spacebar",
       "spacetime",
