new keyword highlight

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -42,6 +42,7 @@
       "Knowt's",
       "Mixpanel",
       "Objs",
+      "PDFs",
       "PPTs",
       "Photoshop",
       "Roboto",
@@ -49,6 +50,7 @@
       "Unauth",
       "Verdana",
       "Walkthrough",
+      "Zwitterion",
       "bgcolor",
       "boomify",
       "btns",
@@ -68,6 +70,7 @@
       "minmax",
       "moar",
       "mygroup",
+      "nmap",
       "noreferrer",
       "overscroll",
       "palegoldenrod",
