refinement follows basic needed

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -55,9 +55,9 @@ border-left-size = 10
 border-right-size = 10
 bottom = true
 fixed-center = true
-font-0 = Hack Nerd Font : size=10.5;2
-font-1 = scientifica:fontformat=truetype:size=11:antialias=false;0
-font-2 = siji:pixelsize=13;1
+; font-0 = Hack Nerd Font : size=10.5;2
+; font-1 = scientifica:fontformat=truetype:size=11:antialias=false;0
+; font-2 = siji:pixelsize=13;1
 height = 24
 line-size = 0
 module-margin-center = 3
@@ -140,7 +140,7 @@ mount-0 = /
 type = internal/fs
 
 [module/cpu]
-format-prefix = ": "
+format-prefix = "cpu: "
 interval = 2
 label = %{A1:gnome-system-monitor &:}%percentage: %%{A}
 type = internal/cpu
@@ -162,7 +162,7 @@ format-foreground = ${colors.foreground}
 
 [module/wifi]
 format-connected = <ramp-signal> <label-connected>
-interface = wlp3s0
+interface = wlan0
 interval = 3.0
 label-connected = %{A1:gnome-control-center wifi &:}%essid%%{A}
 label-disconnected = %{A1:gnome-control-center wifi &:}no-wifi%{A}
