--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,8 +49,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 
 # ----- BRIGHTNESS -----
-bindsym XF86MonBrightnessUp exec "xbacklight -inc 20; notify-send 'Brightness up'"
-bindsym XF86MonBrightnessDown exec "xbacklight -dec 20; notify-send 'Brightness down'"
+bindsym XF86MonBrightnessUp exec "light -A 3; notify-send 'Brightness up'"
+bindsym XF86MonBrightnessDown exec "light -U 3; notify-send 'Brightness down'"
 
 
 # ----- TERMINAL -----
@@ -280,6 +280,8 @@ bindsym $mod+r mode "resize"
 # ----- NOTIFICATION -----
 exec --no-startup-id dunst
 
+# ----- COLOR -----
+exec --no-startup-id xrdb ~/.Xresources
 
 # ----- STATUS BAR -----
 # bar {
