--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,11 +3,11 @@ set $mod Mod4
 set $alt Mod1
 
 
-# ----- DONT KNOW SHIT ABOUT THIS -----
+# ----- DONT KNOW SHIT ABOUT THIS | SYNC i3 WITH GNOME THINGS -----
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+# font pango:DejaVu Sans Mono 8
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
