migrate to coc with ale

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,6 +4,7 @@
     "diagnostic.checkCurrentLine": true,
     "diagnostic.warningSign": ">>",
     "diagnostic.refreshOnInsertMode": true,
+    "diagnostic.displayByAle": true,
 
     "prettier.arrowParens": "always",
     "prettier.jsxBracketSameLine": true,
