alacritty warning and let's use plain coc again

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,7 +4,7 @@
     "diagnostic.checkCurrentLine": true,
     "diagnostic.warningSign": ">>",
     "diagnostic.refreshOnInsertMode": true,
-    "diagnostic.displayByAle": true,
+    // "diagnostic.displayByAle": true,
 
     "prettier.arrowParens": "always",
     "prettier.jsxBracketSameLine": true,
@@ -52,14 +52,17 @@
       "Verdana",
       "Walkthrough",
       "Zwitterion",
+      "aliceblue",
       "bgcolor",
       "birthdate",
+      "blueviolet",
       "boomify",
       "btns",
       "callsign",
       "couchbase",
       "crossorigin",
       "curr",
+      "darkcyan",
       "dickbutt",
       "firestore",
       "flexbox",
@@ -80,6 +83,7 @@
       "palegreen",
       "paleturquoise",
       "palevioletred",
+      "skyblue",
       "smtg",
       "spacebar",
       "spacetime",
