let's try this new tmux theme

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,7 @@
 {
     "coc.preferences.formatOnSaveFiletypes": ["css"],
+    "coc.preferences.colorSupport": true,
+
     "pairs.enableCharacters": ["(", "[", "{", "<", "\"", "'", "`"],
     "diagnostic.checkCurrentLine": true,
     "diagnostic.warningSign": ">>",
