revert tmux and seesm like it fix the bug of flickering statusline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,15 +33,10 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/m
 
 # ----- VIM STATUS TMUX ------
 # set -g focus-events on
-# set -g status-bg default
-# set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge)'
-# set -g status-right-length 120
-# set -g status-interval 0
-set -g focus-events on
-set -g status-style bg=default
-set -g status-left-length 80
-set -g status-right-length 80
-set -g status-justify centre
+set -g status-bg default
+set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge)'
+set -g status-right-length 120
+set -g status-interval 50
 
 
 # ----- THE BAR BELOW CONFIGURATION ----
