vertsplit and tmux focus back to on

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/m
 
 
 # ----- VIM STATUS TMUX ------
-# set -g focus-events on
+set -g focus-events on
 set -g status-bg default
 set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge)'
 set -g status-right-length 120
