some refine I guess

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -67,6 +67,8 @@
       "couchbase",
       "crossorigin",
       "curr",
+      "cytoskeleton",
+      "cytosol",
       "darkcyan",
       "dickbutt",
       "firestore",
