tying get rid snippets

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -89,6 +89,7 @@
       "moar",
       "mygroup",
       "nmap",
+      "noopener",
       "noreferrer",
       "overscroll",
       "palegoldenrod",
