--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -89,6 +89,7 @@
       "moar",
       "mygroup",
       "nmap",
+      "noindex",
       "noopener",
       "noreferrer",
       "overscroll",
@@ -96,6 +97,8 @@
       "palegreen",
       "paleturquoise",
       "palevioletred",
+      "signin",
+      "signup",
       "skyblue",
       "smtg",
       "spacebar",
