CLASSNAME as in dicts

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -45,6 +45,7 @@
     "cSpell.userWords": [
       "Alacritty",
       "Autoload",
+      "CLASSNAME",
       "Consolas",
       "Fastify",
       "Knowt",
