--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -76,6 +76,7 @@
       "cytosol",
       "darkcyan",
       "dickbutt",
+      "encodable",
       "firestore",
       "flexbox",
       "graphiql",
