--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -48,6 +48,8 @@
       "CLASSNAME",
       "Consolas",
       "Fastify",
+      "Gifs",
+      "ISBNs",
       "Knowt",
       "Knowt's",
       "Mixpanel",
@@ -56,6 +58,7 @@
       "PPTs",
       "Photoshop",
       "Roboto",
+      "Strikethrough",
       "Swipeable",
       "Tahoma",
       "Unauth",
