--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -16,6 +16,8 @@
 
     "javascript.suggestionActions.enabled": false,
     "javascript.showUnused": false,
+    "javascript.suggest.completeJSDocs": true,
+    "javascript.implementationsCodeLens.enable": true,
 
     "typescript.suggestionActions.enabled": false,
     "typescript.showUnused": false,
@@ -26,86 +28,74 @@
 
     "eslint.enable": true,
     "eslint.autoFixOnSave": false,
-    "eslint.filetypes": [
-        "javascript",
-        "typescript",
-        "typescriptreact",
-        "javascriptreact"
-    ],
-    "eslint.options": {
-        // "env": {
-        //     "browser": true,
-        //     "node": true
-        // }
-    },
 
     "cSpell.userWords": [
-      "Alacritty",
-      "Autoload",
-      "CLASSNAME",
-      "Consolas",
-      "Fastify",
-      "Gifs",
-      "ISBNs",
-      "Knowt",
-      "Knowt's",
-      "Mixpanel",
-      "Objs",
-      "PDFs",
-      "PPTs",
-      "Photoshop",
-      "Roboto",
-      "Strikethrough",
-      "Swipeable",
-      "Tahoma",
-      "Unauth",
-      "Verdana",
-      "Walkthrough",
-      "Zwitterion",
-      "aliceblue",
-      "birthdate",
-      "blueviolet",
-      "btns",
-      "callsign",
-      "couchbase",
-      "crossorigin",
-      "curr",
-      "cytoskeleton",
-      "cytosol",
-      "darkcyan",
-      "dickbutt",
-      "encodable",
-      "firestore",
-      "flexbox",
-      "gruvbox",
-      "haha",
-      "krehwell",
-      "lightgray",
-      "lightgreen",
-      "macbook",
-      "middlewares",
-      "minmax",
-      "moar",
-      "mygroup",
-      "nmap",
-      "noindex",
-      "noopener",
-      "noreferrer",
-      "overscroll",
-      "palegoldenrod",
-      "palegreen",
-      "paleturquoise",
-      "palevioletred",
-      "signin",
-      "signup",
-      "skyblue",
-      "spacebar",
-      "spacetime",
-      "typebox",
-      "upsert",
-      "uuidv",
-      "yakuza",
-      "youtube",
-      "yuza"
+        "Alacritty",
+        "Autoload",
+        "CLASSNAME",
+        "Consolas",
+        "Fastify",
+        "Gifs",
+        "ISBNs",
+        "Knowt",
+        "Knowt's",
+        "Mixpanel",
+        "Objs",
+        "PDFs",
+        "PPTs",
+        "Photoshop",
+        "Roboto",
+        "Strikethrough",
+        "Swipeable",
+        "Tahoma",
+        "Unauth",
+        "Verdana",
+        "Walkthrough",
+        "Zwitterion",
+        "aliceblue",
+        "birthdate",
+        "blueviolet",
+        "btns",
+        "callsign",
+        "couchbase",
+        "crossorigin",
+        "curr",
+        "cytoskeleton",
+        "cytosol",
+        "darkcyan",
+        "dickbutt",
+        "encodable",
+        "firestore",
+        "flexbox",
+        "gruvbox",
+        "haha",
+        "krehwell",
+        "lightgray",
+        "lightgreen",
+        "macbook",
+        "middlewares",
+        "minmax",
+        "moar",
+        "mygroup",
+        "nmap",
+        "noindex",
+        "noopener",
+        "noreferrer",
+        "overscroll",
+        "palegoldenrod",
+        "palegreen",
+        "paleturquoise",
+        "palevioletred",
+        "signin",
+        "signup",
+        "skyblue",
+        "spacebar",
+        "spacetime",
+        "typebox",
+        "upsert",
+        "uuidv",
+        "yakuza",
+        "youtube",
+        "yuza"
     ]
 }
