--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -164,7 +164,7 @@ format-foreground = ${colors.foreground}
 format-connected = <ramp-signal> <label-connected>
 interface = wlp3s0
 interval = 3.0
-label-connected = %{A1:gnome-control-center wifi &:}%essid%%{A}
+label-connected = %{A1:gnome-control-center wifi &:}%essid:0:6:...%%{A}
 label-disconnected = %{A1:gnome-control-center wifi &:}no-wifi%{A}
 format-connected-underline = ${colors.foreground}
 format-prefix-foreground = ${colors.yellow}
@@ -219,7 +219,7 @@ bar-volume-fill-font = 2
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
-bar-volume-width = 10
+bar-volume-width = 5
 format-volume = <label-volume> <bar-volume>
 label-muted = 🔇 muted
 label-muted-foreground = #666
