fix tmux and oscyank doesnt work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,7 @@ bind-key j swap-window -t +1\; select-window -t +1
 set -g mouse on
 setw -g mode-keys vi
 # ----- SYSTEM CLIPBOARD COPY -----
+set -s set-clipboard on
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
