--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -82,6 +82,7 @@
       "noindex",
       "noopener",
       "noreferrer",
+      "nums",
       "overscroll",
       "palegoldenrod",
       "palegreen",
