--- a/.config/i3/config
+++ b/.config/i3/config
@@ -91,7 +91,7 @@ bindsym $mod+p exec arandr
 # ----- SCREEN SHOT -----
 # bindsym $mod+y			            exec --no-startup-id flameshot gui -p ~/Pics/screenshots
 # bindsym $mod+Shift+y		            exec --no-startup-id flameshot full -p ~/Pics/screenshots
-bindsym Print exec flameshot gui -p ~/Pictures/Screenshots -c
+bindsym Print exec flameshot gui
 bindsym Shift+Print exec flameshot full -c -p ~/Pictures/Screenshots
 
 
