sexier tab switcher

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -47,6 +47,7 @@
       "PDFs",
       "PPTs",
       "Photoshop",
+      "Quizlet",
       "Roboto",
       "Strikethrough",
       "Swipeable",
@@ -56,6 +57,7 @@
       "Walkthrough",
       "Zwitterion",
       "aliceblue",
+      "ascendingly",
       "birthdate",
       "blueviolet",
       "btns",
