--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Consolas NF
-# bold_font        JetBrains Mono Bold
-# italic_font      JetBrains Mono Italic
-# bold_italic_font JetBrains Mono Bold Italic
+bold_font        Consolas NF
+italic_font      Consolas NF
+bold_italic_font Consolas NF
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ font_family      Consolas NF
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11.5
+font_size 11.3
 
 #: Font size (in pts)
 
@@ -174,7 +174,7 @@ cursor_blink_interval 0
 #: special value default means to use the operating system's default
 #: URL handler.
 
-# copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
@@ -274,6 +274,8 @@ cursor_blink_interval 0
 #: specified number of seconds. Set to zero to disable.
 
 # window_alert_on_bell yes
+
+confirm_os_window_close 0
 
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
@@ -534,32 +536,32 @@ foreground #F1F1F1
 background #161B1A
 
 # Black
-color0 #696969
-color8 #212121
-
-# Red
-color1 #696969
-color9 #E32791
-
-# Green
-color2  #696969
-color10 #5FD7A7
-
-# Yellow
-color3  #161B1A
-color11 #F3E430
+color0 #212121
+color8 #696969
 
 # Blue
 color4  #696969
-color12 #161B1A
+color12 #696969
+
+# Cyan
+color6  #696969
+color14 #696969
+
+# Green
+color2  #5FD7A7
+color10 #696969
 
 # Magenta
 color5  #696969
 color13 #696969
 
-# Cyan
-color6  #696969
-color14 #696969
+# Red
+color1 #E32791
+color9 #696969
+
+# Yellow
+color3  #F3E430
+color11 #696969
 
 # White
 color7  #F1F1F1
@@ -661,73 +663,6 @@ term xterm-kitty
 #: work.
 
 #: }}}
-
-#: OS specific tweaks {{{
-
-# macos_titlebar_color system
-
-#: Change the color of the kitty window's titlebar on macOS. A value
-#: of system means to use the default system color, a value of
-#: background means to use the background color of the currently
-#: active window and finally you can use an arbitrary color, such as
-#: #12af59 or red. WARNING: This option works by using a hack, as
-#: there is no proper Cocoa API for it. It sets the background color
-#: of the entire window and makes the titlebar transparent. As such it
-#: is incompatible with background_opacity. If you want to use both,
-#: you are probably better off just hiding the titlebar with
-#: hide_window_decorations.
-
-# macos_option_as_alt no
-
-#: Use the option key as an alt key. With this set to no, kitty will
-#: use the macOS native Option+Key = unicode character behavior. This
-#: will break any Alt+key keyboard shortcuts in your terminal
-#: programs, but you can use the macOS unicode input technique. You
-#: can use the values: left, right, or both to use only the left,
-#: right or both Option keys as Alt, instead.
-
-# macos_hide_from_tasks no
-
-#: Hide the kitty window from running tasks (Option+Tab) on macOS.
-
-# macos_quit_when_last_window_closed no
-
-#: Have kitty quit when all the top-level windows are closed. By
-#: default, kitty will stay running, even with no open windows, as is
-#: the expected behavior on macOS.
-
-# macos_window_resizable yes
-
-#: Disable this if you want kitty top-level (OS) windows to not be
-#: resizable on macOS.
-
-# macos_thicken_font 0.3
-
-#: Draw an extra border around the font with the given width, to
-#: increase legibility at small font sizes. For example, a value of
-#: 0.75 will result in rendering that looks similar to sub-pixel
-#: antialiasing at common font sizes.
-
-# macos_traditional_fullscreen no
-macos_traditional_fullscreen 3
-
-#: Use the traditional full-screen transition, that is faster, but
-#: less pretty.
-
-macos_show_window_title_in all
-
-#: Show or hide the window title in the macOS window or menu-bar. A
-#: value of window will show the title of the currently active window
-#: at the top of the macOS window. A value of menubar will show the
-#: title of the currently active window in the macOS menu-bar, making
-#: use of otherwise wasted space. all will show the title everywhere
-#: and none hides the title in the window and the menu-bar.
-
-# macos_custom_beam_cursor no
-
-#: Enable/disable custom mouse cursor for macOS that is easier to see
-#: on both light and dark backgrounds. WARNING: this might make your
-#: mouse cursor invisible on dual GPU machines.
 
 linux_display_server auto
 
