--- a/.config/i3/config
+++ b/.config/i3/config
@@ -75,12 +75,13 @@ bindsym $mod+e exec --no-startup-id nautilus
 bindsym $mod+o exec --no-startup-id $term -e nvim ~/.config/i3/config
 
 
-# ----- APPS WINDOW DEFAULT FLOATING ENABLE -----
+# ----- APPS WINDOW DEFAULT FLOATING ENABLE, use `xprop` to detect it -----
 for_window [class="Yad" title="yad-calendar"] floating enable
 for_window [class="gnome-system-monitor"] floating enable
 for_window [class="vokoscreenNG"] floating enable
 for_window [class="Nitrogen"] floating enable
 for_window [class="Eog"] floating enable
+for_window [class="SimpleScreenRecorder"] floating enable
 
 
 # ----- MONITOR -----
