--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -93,6 +93,7 @@
       "palegreen",
       "paleturquoise",
       "palevioletred",
+      "perim",
       "signin",
       "signup",
       "skyblue",
