--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -44,6 +44,7 @@
       "Knowt",
       "Knowt's",
       "Mixpanel",
+      "Modelica",
       "Objs",
       "PDFs",
       "PPTs",
@@ -103,6 +104,7 @@
       "typebox",
       "upsert",
       "uuidv",
+      "vals",
       "yakuza",
       "youtube",
       "yuza"
