--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,12 +1,4 @@
 {
-    "languageserver": {
-        "golang": {
-            "command": "gopls",
-            "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
-            "filetypes": ["go"]
-        }
-    },
-
     "coc.preferences.formatOnSaveFiletypes": ["css"],
     "suggest.noselect": true,
     "suggest.enablePreselect": false,
@@ -40,82 +32,83 @@
     "eslint.autoFixOnSave": false,
 
     "cSpell.userWords": [
-        "Alacritty",
-        "Autoload",
-        "CLASSNAME",
-        "Consolas",
-        "Dropzone",
-        "Fastify",
-        "Flippable",
-        "Gifs",
-        "ISBNs",
-        "Knopfler",
-        "Knowt",
-        "Knowt's",
-        "Mixpanel",
-        "Modelica",
-        "Objs",
-        "PDFs",
-        "PPTs",
-        "Photoshop",
-        "Quizlet",
-        "Roboto",
-        "Strikethrough",
-        "Swipeable",
-        "Tahoma",
-        "Unauth",
-        "Verdana",
-        "Walkthrough",
-        "Zwitterion",
-        "aliceblue",
-        "ascendingly",
-        "birthdate",
-        "blueviolet",
-        "btns",
-        "callsign",
-        "couchbase",
-        "crossorigin",
-        "curr",
-        "cytoskeleton",
-        "cytosol",
-        "darkcyan",
-        "dickbutt",
-        "encodable",
-        "firestore",
-        "flexbox",
-        "gruvbox",
-        "krehwell",
-        "lightgray",
-        "lightgreen",
-        "macbook",
-        "middlewares",
-        "minmax",
-        "moar",
-        "mygroup",
-        "nextjs",
-        "nmap",
-        "noindex",
-        "noopener",
-        "noreferrer",
-        "nums",
-        "overscroll",
-        "palegoldenrod",
-        "palegreen",
-        "paleturquoise",
-        "palevioletred",
-        "perim",
-        "signin",
-        "signup",
-        "skyblue",
-        "spacebar",
-        "spacetime",
-        "suza",
-        "typebox",
-        "upsert",
-        "uuidv",
-        "vals",
-        "yakuza",
-        "youtube",
-        "yuza"
+      "Alacritty",
+      "Autoload",
+      "CLASSNAME",
+      "Consolas",
+      "Dropzone",
+      "Fastify",
+      "Flippable",
+      "Gifs",
+      "ISBNs",
+      "Knopfler",
+      "Knowt",
+      "Knowt's",
+      "Mixpanel",
+      "Modelica",
+      "Objs",
+      "PDFs",
+      "PPTs",
+      "Photoshop",
+      "Quizlet",
+      "Roboto",
+      "Strikethrough",
+      "Swipeable",
+      "Tahoma",
+      "Unauth",
+      "Unstyled",
+      "Verdana",
+      "Walkthrough",
+      "Zwitterion",
+      "aliceblue",
+      "ascendingly",
+      "birthdate",
+      "blueviolet",
+      "btns",
+      "callsign",
+      "couchbase",
+      "crossorigin",
+      "curr",
+      "cytoskeleton",
+      "cytosol",
+      "darkcyan",
+      "dickbutt",
+      "encodable",
+      "firestore",
+      "flexbox",
+      "gruvbox",
+      "krehwell",
+      "lightgray",
+      "lightgreen",
+      "macbook",
+      "middlewares",
+      "minmax",
+      "moar",
+      "mygroup",
+      "nextjs",
+      "nmap",
+      "noindex",
+      "noopener",
+      "noreferrer",
+      "nums",
+      "overscroll",
+      "palegoldenrod",
+      "palegreen",
+      "paleturquoise",
+      "palevioletred",
+      "perim",
+      "signin",
+      "signup",
+      "skyblue",
+      "spacebar",
+      "spacetime",
+      "suza",
+      "typebox",
+      "upsert",
+      "uuidv",
+      "vals",
+      "yakuza",
+      "youtube",
+      "yuza"
     ]
 }
